Prevent rounded corners on iOS

--- a/assets/app/elements/forms.scss
+++ b/assets/app/elements/forms.scss
@@ -6,4 +6,5 @@ button,
 input[type=submit] {
   -moz-appearance: none;
   -webkit-appearance: none;
+  -webkit-border-radius: 0px;
 }
